# reflow-canvas-lti

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  NOTICE  OPERATIONS.md  PORTING_BRIEF.md  README.md  docker-compose.dev.yml  docker-compose.tunnel.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-build.yml
connector/: config.py  dependencies.py  logging_setup.py  main.py
connector/api/: _pii_approval_page.py  canvas_consent.py  canvas_oauth.py  canvas_panorama.py  canvas_review.py
connector/canvas/: __init__.py  alt_formats.py  audit.py  client.py  errors.py  markdown_to_html.py  math_render.py  oauth.py  panorama.py  pdf_figures.py  privacy.py  reflow_client.py  sanitize.py  signals.py  spend_cap.py  state.py  tenant.py  user_oauth.py  verapdf_audit.py  wcag_checks.py
connector/lti/: __init__.py  config.py  jwt_validation.py  keys.py  platform.py  platform_store.py  routes.py  session.py
connector/tools/: __init__.py  erase_user.py  generate_keys.py  reprocess_figures.py
connector/utils/: rate_limit.py  retry_helpers.py
connector/web/canvas_review/: dashboard.html  index.html  one.html  panorama.js
connector/workers/: canvas_watcher.py  reflow_bridge_worker.py
docs/: ARCHITECTURE.md  CANVAS_SETUP.md  DEPLOY.md  PILOT_RUNBOOK.md  REFLOW_API.md
scripts/: backup-redis.sh  generate_lti_keys.sh  preflight.py
tests/: conftest.py  test_smoke.py
tests/integration/: __init__.py  conftest.py  test_approve_flow.py  test_pii_decision.py
tests/unit/: test_alt_formats_math.py  test_erase_user.py  test_markdown_to_html.py  test_math_render.py  test_pdf_figures.py  test_pdf_text_layer.py  test_rate_limit.py  test_state_pending.py  test_tagged_pdf.py  test_verapdf_audit.py
